manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gotti-dev
  labels:
    istio-injection: enabled
