manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotti-dev
  namespace: gotti-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gotti-dev
  template:
    metadata:
      labels:
        app: gotti-dev
    spec:
      containers:
      - name: gotti-dev
        image: ghcr.io/gotti/nginx-static:794f715
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
