manifests/nginx-static.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotti-dev
  namespace: gotti-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-static
  template:
    metadata:
      labels:
        app: nginx-static
    spec:
      containers:
      - name: nginx-static
        image: ghcr.io/gotti/nginx-static:ab73fe7
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
