manifests/test.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: test
  namespace: gotti-dev
spec:
  selector:
    matchLabels:
      app: nginx-static
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nginx-static
    spec:
      containers:
      - name: nginx-static
        image: gotti/nginx-static:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
