manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-static
  namespace: gotti-dev
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-static
