manifests/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gotti-dev
  namespace: gotti-dev
spec:
  routes:
  - kind: Rule
    match: Host(`gotti.dev`)
    services:
    - name: gotti-dev
      port: 80
